[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nom = "7.1.3"
rangemap = "1.7.0"
indexmap = "2.12.1"
bitvec = "1.0.1"
itertools = "0.14.0"
good_lp = { version = "1.14.2", default-features = false, features = [
  "microlp",
] }

